nuevo inicio de sesion index.html
se borro el admin y contraseña q se mostraba en el inicio y se agrego un boton de enlace hacia la landing

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
  
  
 <!DOCTYPE html>   
@@ -520,20 +521,15 @@
       Iniciar Sesión
      </button>
 </form>
-<div class="mt-4 text-center text-sm text-gray-600">
-<p>
-      Usuario por defecto:
-      <strong>
-       admin
-      </strong>
-</p>
-<p>
-      Contraseña:
-      <strong>
-       admin123
-      </strong>
-</p>
-</div>
+    <!-- En lugar de mostrar las credenciales predeterminadas, se muestra un botón
+         para registrar nuevos usuarios que redirige a la landing del sistema. -->
+    <div class="mt-4 text-center">
+      <button type="button"
+              onclick="window.location.href='https://fixlytaller.com/'"
+              class="w-full bg-green-600 text-white py-2 px-4 rounded-lg hover:bg-green-700 transition duration-200">
+        Registrarse
+      </button>
+    </div>
 </div>
 </div>
 <!-- Aplicación Principal -->
