Add API base and auth scripts to index.html
Added scripts for API base and authentication handling.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 
 <html lang="es">
 <head>
+ <script>window.FIXLY_API_BASE = "https://api.fixlytaller.com";</script>
+<script src="./auth.js"></script>
+<script>
+document.addEventListener("DOMContentLoaded", () => FixlyAuth.requireAuth());
+</script>
+
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Fixly Taller - Sistema de Gestión Completo 
